2009-02-13  David Levin  <levin@chromium.org>

Reviewed by Darin Adler.

        Bug 23926: Race condition in callOnMainThreadAndWait
        <https://bugs.webkit.org/show_bug.cgi?id=23926>

        * wtf/MainThread.cpp:
        Removed callOnMainThreadAndWait since it isn't used.



git-svn-id: svn://svn.chromium.org/blink/trunk@40969 bbb929c8-8fbe-4397-9dbb-9b2b20218538